# ChangeLog for dev-libs/libassuan
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.77 2011/03/12 13:27:39 klausman Exp $

  12 Mar 2011; Tobias Klausmann <klausman@gentoo.org> libassuan-2.0.1.ebuild:
  Stable on alpha, bug #355265

  11 Mar 2011; Thomas Kahle <tomka@gentoo.org> libassuan-2.0.1.ebuild:
  x86 stable per bug 355265

  08 Mar 2011; Jeroen Roovers <jer@gentoo.org> libassuan-2.0.1.ebuild:
  Stable for HPPA (bug #355265).

  19 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libassuan-2.0.1.ebuild:
  Stable on amd64 wrt bug #355265

*libassuan-2.0.1 (12 Jan 2011)

  12 Jan 2011; Dane Smith <c1pher@gentoo.org> +libassuan-2.0.1.ebuild:
  Version bump. Thanks Sebastian Pipping bug 351442.

  12 Jan 2011; Diego E. Pettenò <flameeyes@gentoo.org> libassuan-1.0.5.ebuild,
  libassuan-2.0.0.ebuild:
  Fix HOMEPAGE. Thanks to Sebastian Pipping in bug #351440.

  30 Aug 2010; Raúl Porcel <armin76@gentoo.org> libassuan-2.0.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #320037

  21 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  libassuan-2.0.0.ebuild:
  ppc64 stable wrt #320037

  19 Jul 2010; Markus Meier <maekke@gentoo.org> libassuan-2.0.0.ebuild:
  arm stable, bug #320037

  06 Jul 2010; Jeroen Roovers <jer@gentoo.org> libassuan-2.0.0.ebuild:
  Stable for HPPA (bug #320037).

  27 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  libassuan-2.0.0.ebuild:
  stable x86, bug 320037

  26 May 2010; Markos Chandras <hwoarang@gentoo.org> libassuan-2.0.0.ebuild:
  Stable on amd64 wrt bug #320037

  24 May 2010; <nixnut@gentoo.org> libassuan-2.0.0.ebuild:
  ppc stable #320037

  19 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  libassuan-2.0.0.ebuild:
  Add "static-libs" USE flag (bug #316065).

*libassuan-2.0.0 (11 Jan 2010)

  11 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +libassuan-2.0.0.ebuild:
  Version bump.
