@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libgpg-error
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.78 2011/03/12 13:27:22 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.79 2011/03/23 20:32:55 xarthisius Exp $
+
+  23 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> libgpg-error-1.10.ebuild:
+  ppc/ppc64 stable wrt #355265
 
   12 Mar 2011; Tobias Klausmann <klausman@gentoo.org> libgpg-error-1.10.ebuild:
   Stable on alpha, bug #355265
