@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libksba
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.119 2011/03/12 13:27:52 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.120 2011/03/23 20:34:17 xarthisius Exp $
+
+  23 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> libksba-1.1.0.ebuild:
+  ppc/ppc64 stable wrt #355265
 
   12 Mar 2011; Tobias Klausmann <klausman@gentoo.org> libksba-1.1.0.ebuild:
   Stable on alpha, bug #355265
